// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Range Component > should match snapshots 1`] = `
<div>
  <div
    class="relative flex h-6 cursor-pointer items-center select-none"
  >
    <div
      class="bg-primary-200 relative h-1 w-full overflow-hidden rounded-[1px]"
    >
      <div
        class="h-full bg-fuchsia-400"
        style="width: 0%;"
      />
    </div>
    <div
      class="absolute top-1/2 h-6 w-6 -translate-1/2 rounded-lg bg-zinc-50 shadow-lg"
      style="left: calc(0% + 12px);"
    />
  </div>
</div>
`;

exports[`Range Component > should match snapshots 2`] = `
<div>
  <div
    class="relative flex h-6 cursor-pointer items-center select-none pointer-events-none"
  >
    <div
      class="bg-primary-200 relative h-1 w-full overflow-hidden rounded-[1px]"
    >
      <div
        class="h-full bg-primary-300"
        style="width: 0%;"
      />
    </div>
    <div
      class="absolute top-1/2 h-6 w-6 -translate-1/2 rounded-lg bg-zinc-50 shadow-lg"
      style="left: calc(0% + 12px);"
    />
  </div>
</div>
`;

exports[`Range Component > should match snapshots 3`] = `
<div>
  <div
    class="relative flex h-6 cursor-pointer items-center select-none"
  >
    <div
      class="bg-primary-200 relative h-1 w-full overflow-hidden rounded-[1px]"
    >
      <div
        class="h-full bg-fuchsia-400"
        style="width: 50%;"
      />
    </div>
    <div
      class="absolute top-1/2 h-6 w-6 -translate-1/2 rounded-lg bg-zinc-50 shadow-lg"
      style="left: calc(50% + 0px);"
    />
  </div>
</div>
`;
